# CI-analogy-playground

./: .gitlab-ci.yml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  hello.cpp
